Controller Pro 1.6.0 (WIP)
==========================

  - Do not rely on pre-existing directory structure when creating RRD files (#6, ORCJAVA-382)
  - Updated drools to version 6.4 (#3)
  - Have drools use pre-built kjars if bundled in configuration (#5)
  - Convert build system to Gradle (ORCJAVA-511)
  - Add unit tests for EventProcessorChain (#17, ORCJAVA-207)

Controller Pro 1.5.0
====================

New Features:

  - Controller API extension (ORCJAVA-455)
  - Controller API extension - v2 (ORCJAVA-492)
  - Added Alarm Protocol (ORCJAVA-508)
  - Replace RXTX library with nrjavaserial library (ORCJAVA-449)
  - Add support for dynamic command values to Alarm Protocol (ORCJAVA-512)
  - Add Velbus logging config to log4j.properties (ORCJAVA-513)
  - Alarm protocol enhancement (ORCJAVA-517)

Bug Fixes:

  - Fixed: Test fixtures are bundle with controller distribution (ORCJAVA-431)
  - Update TcpSocketPort to better handle socket close by throwing an IOException (ORCJAVA-514)
  - Improve connection reliability of VELBUS protocol (ORCJAVA-515)
  - Fixed: Alarm config updates were removign device names from command refs (ORCJAVA-516)

Controller Pro 1.4.1
====================

  - Fixed: openremote.sh launch script fails on certain environments (ORCJAVA-509)

Controller Pro 1.4.0
====================

New Features:
  - Upgrade flexjson library to version 3.2 (ORCJAVA-498)
  - Support remote command to trigger online sync (ORCJAVA-501)
  - Start the BeehiveCommandCheckService thread even if no configuration is loaded (ORCJAVA-504)
  - Add Domintell protocol support (ORCJAVA-253)
  - Parameterize common Beehive connection parameters in config.properties (ORCJAVA-443)

Bug Fixes:

  - Fixed: Multiple issues in BeehiveCommandCheckServiceTest (ORCJAVA-497)
  - Do not encode password in communication with CCS/DDS (ORCJAVA-495)
  - Never send md5 encoded password to backend (ORCJAVA-503)
  - Remove warnings when compiling under JDK7/8 (ORCJAVA-499)