@@ -30,6 +30,8 @@ import org.openremote.controller.exception.InitializationException;
 public abstract class EventProcessor // TODO : implement lifecycle
 {
 
+  public void init() {}
+
   public void start(LifeCycleEvent ctx) throws InitializationException {}
 
   public void stop() {}
